syntax = "proto3";

package users;

service Users {
  rpc Login(LoginRequest) returns (LoginResponse);
//  rpc Me(MeRequest) returns (MeResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message User {
  string id = 1;
  string username = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string error = 1;
  string token = 2;
  User user = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string ubi_id = 3;
}

message RegisterResponse {
  string error = 1;
  User user = 2;
}
